--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@
 
     /*========== Colors ==========*/
     /* Change favorite color */
-    --hue-color: 34; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+    --hue-color: 34; 
 
     /* HSL color mode */
     --first-color: hsl(var(--hue-color), 69%, 61%);
@@ -39,7 +39,7 @@
     --font-medium: 500;
     --font-semi-bold: 600;
 
-    /*========== Margenes Bottom ==========*/
+    /*========== Margins Bottom ==========*/
     /* .25rem = 4px, .5rem = 8px, .75rem = 12px ... */
     --mb-0-25: .25rem;
     --mb-0-5: .5rem;
@@ -269,7 +269,7 @@ img {
 /* Change background header */
 
 .scroll-header{
-  box-shadow: 0 -1px 4px rgba(0,0,0,.15);
+  box-shadow: 0 -1px 4px rgba(0,0,0,.1);
 }
 
 /*==================== HOME ====================*/
@@ -412,14 +412,14 @@ img {
 }
 
 .about__description{
-  text-align: center;
-  margin-bottom: var(--mb-0-25);
+  text-align: justify;
+  margin-bottom: var(--mb-2-5);
 }
 
 .about__info{
   display: flex;
   justify-content: space-evenly;
-  margin-bottom: var(--mb-0-25);
+  margin-bottom: var(--mb-2-5);
 }
 
 .about__info-title{
@@ -484,11 +484,11 @@ img {
   padding-left: 2.7rem;
 }
 
-.skills__titles{[
+.skills__titles{
   display: flex;
   justify-content: space-between;
   margin-bottom: var(--mb-0-5);
-]}
+}
 
 .skills__name{
   font-size: var(--normal-font-size);
@@ -797,6 +797,12 @@ img {
 
 /*==================== TESTIMONIAL ====================*/
 
+.custom-margin{
+  margin-bottom: var(--mb-1-5);
+}
+.custom-subtitle{
+  font-size: var(--h3-font-size);
+}
 .testimonial__data,
 .testimonial__header{
   display: flex;
@@ -820,7 +826,7 @@ img {
   color: var(--text-color-light);
 }
 .testimonial__description{
-  margin-bottom: var(--mb-0-25);
+  margin-bottom: var(--mb-2-5);
 }
 .testimonial__icon-star{
  color: var(--first-color);
@@ -910,13 +916,13 @@ img {
 .footer__copy{
   font-size: var(--smaller-font-size);
   text-align: center;
-  color: var(--text-color-light);
-  margin-top: var(--mb-3);
+  margin-top: var(--mb-2);
 }
 .footer__title,
 .footer__subtitle,
 .footer__link,
-.footer__social{
+.footer__social,
+.footer__copy{
   color: #fff;
 }
 
@@ -928,8 +934,8 @@ img {
   right: 1rem;
   bottom: -20%;
   background-color: var(--first-color);
-  opacity: 0;
-  padding: 0 0.3rem;
+  opacity: 0.8;
+  padding: 0 .3rem;
   border-radius: .4rem;
   z-index: var(--z-tooltip);
   transition: .4s;
@@ -968,7 +974,9 @@ img {
 }
 
 /*==================== MEDIA QUERIES ====================*/
+
 /* For small devices */
+
  @media screen and (max-width: 350px) {
     .container{
       margin-left: var(--mb-1);
@@ -988,7 +996,7 @@ img {
     }
 
     .home__blob{
-      width: 100px;
+      width: 180px;
     }
 
     .skills__title{
@@ -996,6 +1004,10 @@ img {
     }
     .qualification__data{
       gap: .5rem;
+    }
+
+    .skills__icon{
+      font-size: 1.5rem;
     }
 
     .services__container{
@@ -1030,6 +1042,9 @@ img {
       text-align: center;
     }
 
+    .contact__icon{
+      font-size: 1rem;
+    }
  }
 
 
@@ -1062,9 +1077,13 @@ img {
     grid-template-columns: .6fr;
     justify-content: center;
   }
+
+  .about__img{
+    width: 250px;
+  }
 }
 
-@media screen and(min-width:768px) {
+@media screen and (min-width: 768px) {
     .container{
       margin-left: auto;
       margin-right: auto;
@@ -1078,10 +1097,12 @@ img {
     .section__subtitle{
       margin-bottom: 4rem;
     }
+
     .header{
       top: 0;
       bottom: initial;
     }
+
     .header,
     .main,
     .footer__container{
@@ -1119,6 +1140,7 @@ img {
     }
     .home__scroll{
       display: block;
+      text-align: center;
     }
     .home__scroll-button{
       margin-left: 3rem;
@@ -1145,7 +1167,7 @@ img {
       margin: 0 var(--mb-1);
     }
     .qualification__sections{
-      grid-template-columns: .5fr;
+      grid-template-columns: max-content;
     }
 
     .services__container{
@@ -1175,7 +1197,7 @@ img {
     .project__bg{
       background: none;
     }
-    .portfolio__container{
+    .project__container{
       background-color: var(--first-color);
       border-radius: 1rem;
       padding: 3rem 2.5rem 0;
@@ -1206,7 +1228,7 @@ img {
 
 /* For large devices */
 
-@media screen and(min-width:1024px) {
+@media screen and (min-width: 1024px) {
    .header,
    .main,
    .footer__container{
